--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -6,6 +6,9 @@ a{
     text-decoration:none;
     color:black;
 }
+.border{
+    border: 5px solid black;
+}
 /* header and banner */
 .banner{
     display:flex;
@@ -83,7 +86,7 @@ h3{
         margin-top:-1em;
     }
 }
-/* button with examples */
+/* button*/
 .button{
     text-align:center;
     margin:auto;
@@ -92,34 +95,81 @@ button{
     width: 150px;
     height:60px;
 }
+/*examples*/
 .examples{
-    display:none;
+    display:none; /*this will be changed via JS at the click of a button*/
     width:100%;
     margin:auto;
 }
 .show-box{
-    display:block;
-    width: 100%;
-    background-color: pink;
-    margin-left:auto;
-    margin-right:auto;
+    width:auto;
+    height:350px;
+    /*background-color:pink;/*for now. change color later*/
+    margin-bottom:12px;
+}
+.show-box2{
+    width:auto;
+    height:350px;
+    /*background-color:pink;/*for now. change color later*/
+    margin-bottom:12px;
 }
 .show-box-pic{
-    margin-left:auto;
-    margin-right:auto;
-    display:block;
-    width:30%;
+    float:right;
     height:300px;
+    width:450px;
+    margin-right:38%;
+    transition-duration:0.5s;
+}
+.show-box-pic2{
+    float:left;
+    height:300px;
+    width:450px;
+    margin-left:38%;
+    transition-duration:0.5s;
 }
 .box-text{
-    background-color:pink;
+    font-size: 30px;
+    height:300px;
+    display:flex;
+    align-items:center;
     text-align:center;
+    justify-content:center;
+    opacity:0;
+    margin-left:-20%;
+    transition-duration:0.5s;
+}
+.box-text2{
+    font-size: 30px;
+    height:300px;
+    display:flex;
+    align-items:center;
+    text-align:center;
+    justify-content:center;
+    opacity:0;
+    margin-right:-20%;
+    transition-duration:0.5s;
+}
+.show-box:hover .show-box-pic{
+    margin-right:0%;
+}
+.show-box:hover .box-text{
+    opacity:1;
+    margin-left:20%;
+}
+.show-box2:hover .show-box-pic2{
+    margin-left:0%;
+}
+.show-box2:hover .box-text2{
+    opacity:1;
+    margin-right:20%;
 }
 .site-link{
-    text-decoration:underline;
+    text-decoration:none;
     color:blue;
     font-size:20px;
-    background-color:pink;
+}
+.site-link:hover{
+    text-decoration:underline;
 }
 /* footer */
 
